--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,16 @@
       <version>0.8.0</version>
     </dependency>
     <dependency>
+      <groupId>org.deeplearning4j</groupId>
+      <artifactId>dl4j-cuda-specific-examples</artifactId>
+      <version>0.8-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.deeplearning4j</groupId>
+      <artifactId>dl4j-examples</artifactId>
+      <version>0.8-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
